# stock_scanner

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backtest/: ma_sensitivity.py
data/: fundamentals_cache.py  ohlcv_cache.py
docs/: README_CN.md
output/: formatter.py
scanners/: base.py  entry_point.py  ma_pullback.py  registry.py  strong_pullback.py
tickers/: universe.py
