[project]
name = "market-lens"
version = "0.1.0"
description = "CLI stock analyzer with pluggable strategies"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.0",
    "rich>=13.0",
    "tqdm>=4.65",
]

[project.scripts]
market-lens = "main:cli"
